<resources>
    <string name="app_name">iShopApp</string>

    <string name="productActivity">Member_4 developed functions to manage product information and discounts within the app. His collaborative efforts with the supermarket staff ensured that the app provided up-to-date and relevant information to users. Member_4\'s meticulous approach to data management and commitment to accuracy played a crucial role in delivering a high-quality user experience.</string>
    <string name="locationActivity">Member_5 took the lead in designing and implementing the supermarket map with voice guidance feature. Leveraging Cartesian coordinates, Member_5 meticulously mapped out the supermarket layout, ensuring accuracy and precision in navigation. Their attention to detail and technical proficiency contributed significantly to creating a user-friendly and reliable navigation system for blind individuals.</string>
    <string name="DiscountActivity">Member_3 collaborated closely with the supermarket staff to manage product information and discounts within the app. His effective communication skills and attention to detail ensured that the app accurately reflected the layout of the supermarket and incorporated special discounts and promotions. Member_3\'s dedication to enhancing the shopping experience for users greatly contributed to the success </string>
    <string name="shoppingCartActivity">Member_2 led the development of the shopping cart functionality, creating a seamless interface for users to manage their shopping lists and complete purchases. His expertise in user interface design and accessibility features ensured that blind users could navigate the shopping cart interface with ease. Member_2\'s dedication to usability and functionality significantly enhanced the overall shopping experience for users.</string>
    <string name="voiceCommand">Member_1 played a pivotal role in implementing voice commands within the app. His expertise in voice recognition technology enabled users to interact with the app seamlessly using voice commands, enhancing accessibility for blind individuals. Member_1\'s dedication to creating a hands-free experience greatly improved the usability and functionality of the app.</string>
</resources>